--- a/src/Components/HeaderNav/HeaderNav.css
+++ b/src/Components/HeaderNav/HeaderNav.css
@@ -9,8 +9,9 @@
 
 .header .sas .side_nav {
   width: 100%;
-  height: 93.3vh;
-  position: absolute;
+  height: 100vh;
+  position: -webkit-sticky;
+  position: sticky;
   z-index: 10;
   display: none;
 }
@@ -60,6 +61,27 @@
   font-family: "Chomsky";
   font-weight: 500;
   font-size: 55px;
+}
+
+.header .sub_header .center h1:hover {
+  text-decoration: none;
+  color: initial;
+  border: none;
+  outline: none;
+}
+
+.header .sub_header .center h1:visited {
+  text-decoration: none;
+  color: initial;
+  border: none;
+  outline: none;
+}
+
+.header .sub_header .center h1:focus {
+  text-decoration: none;
+  color: initial;
+  border: none;
+  outline: none;
 }
 
 .header .sub_header .right {
