--- a/src/Components/HeaderNav/HeaderNav.scss
+++ b/src/Components/HeaderNav/HeaderNav.scss
@@ -8,8 +8,10 @@
         height: auto;
         .side_nav {
             width: 100%;
-            height: 93.3vh;
-            position: absolute;
+            // overflow-y: scroll;
+            // max-height: 120vh;
+            height: 100vh;
+            position: sticky;
             // background: #000;
             // top: 0;
             z-index: 10;
@@ -55,6 +57,27 @@
                 font-family: "Chomsky";
                 font-weight: 500;
                 font-size: 55px;
+
+                &:hover {
+                    text-decoration: none;
+                  color: initial;
+                  border: none;
+                  outline: none;
+                  }
+                
+                  &:visited {
+                    text-decoration: none;
+                  color: initial;
+                  border: none;
+                  outline: none;
+                  }
+                
+                  &:focus {
+                    text-decoration: none;
+                  color: initial;
+                  border: none;
+                  outline: none;
+                  }
             }
         }
 
