--- a/src/Components/Side Nav/SideNav.css
+++ b/src/Components/Side Nav/SideNav.css
@@ -8,6 +8,12 @@
   padding-top: 10px;
 }
 
+.sideNav_container .side_intro {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 40px;
+}
+
 .sideNav_container .search {
   width: 80%;
   margin: 0 auto;
@@ -37,6 +43,99 @@
   color: #4e4e4e;
   padding: 5px;
   font-size: 15px;
+  border-radius: 5px;
+}
+
+.sideNav_container .side_bar_news_list {
+  width: 90%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 20px;
+}
+
+.sideNav_container .side_bar_news_list .left {
+  width: 50%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sideNav_container .side_bar_news_list .left .side_links {
+  margin-bottom: 20px;
+  color: #302f2f;
+  text-decoration: none;
+  font-family: 'Franklin';
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.sideNav_container .side_bar_news_list .right {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sideNav_container .side_bar_news_list .right .side_links {
+  font-family: 'Roboto' !important;
+  margin-bottom: 20px;
+  color: #4583b3;
+  text-decoration: none;
+  font-family: 'Franklin';
+  font-weight: bolder;
+  font-size: 17px;
+}
+
+.sideNav_container .side_subscribe {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sideNav_container .side_subscribe p {
+  text-align: center;
+  font-weight: bolder;
+  color: #4583b3;
+}
+
+.sideNav_container .side_subscribe input {
+  width: 70%;
+  height: 30px;
+  border: 1px solid #cccc;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+.sideNav_container .side_subscribe .side_sub_btn {
+  width: 72%;
+  margin-top: 15px;
+  height: 50px;
+  background: #4583b3;
+  color: white;
+  border: none;
   border-radius: 5px;
 }
 /*# sourceMappingURL=SideNav.css.map */
