--- a/src/Pages/News Page/NewsPage.scss
+++ b/src/Pages/News Page/NewsPage.scss
@@ -1,157 +1,411 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap");
 
 .newsPage_container {
-    max-width: 1250px;
-    margin: 0 auto;
+  max-width: 1250px;
+  margin: 0 auto;
+  height: auto;
+  margin-top: 50px;
+
+  .newsPage_wrapper {
     height: auto;
-    margin-top: 50px;
+    max-width: 800px;
+    margin: 0 auto;
 
-    .newsPage_wrapper {
-        max-width: 800px;
-        margin: 0 auto;
+    .news_title {
+      font-family: "PT Serif";
+      font-style: italic;
+      font-size: 40px;
+      // line-height: 46px;
+      font-weight: 700;
+      // overflow: hidden;
+    }
 
-        .news_title {
-            font-family: 'PT Serif';
-            font-style: italic;
-            font-size: 40px;
-            line-height: 46px;
-            font-weight: 700;
+    .news_summary {
+      margin-top: 15px;
+      font-family: "Gideon Roman";
+      font-weight: 400;
+      font-size: 23px;
+      line-height: 30px;
+    }
+
+    .top_socialmedia {
+      width: 70%;
+      display: flex;
+
+      .icn {
+        font-size: 15px;
+        margin-left: 15px;
+        width: 35px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #eeeeee;
+        border-radius: 50%;
+        cursor: pointer;
+
+        &:first-child {
+          margin-left: 0px;
+        }
+      }
+    }
+
+    .media {
+      width: 100%;
+      height: auto;
+      // background: #ee4f;
+      img {
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
+        overflow: hidden;
+      }
+      .media_description {
+        font-family: "roboto";
+        font-size: 13px;
+        color: rgb(119, 119, 119);
+        font-style: italic;
+      }
+    }
+
+    .author {
+      width: 40%;
+      height: 6vh;
+      // background: orangered;
+      margin-top: 40px;
+      display: flex;
+      align-items: center;
+
+      .auth_img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .auth_name {
+        display: block;
+        font-size: 15px;
+        font-family: "roboto";
+        font-weight: 500;
+        margin-left: 5px;
+      }
+    }
+
+    .date_time {
+      font-size: 13px;
+      font-family: "roboto";
+    }
+
+    .news_text {
+      font-size: 18px;
+      line-height: 30px;
+      margin-top: 35px;
+      font-family: "Balsamiq Sans";
+    }
+
+    .news_comments {
+      width: 99%;
+      height: 80vh;
+      // border: 1px solid red;
+      // padding: 5px;
+      margin-top: 30px;
+
+      // !SCROLL BAR STYLE
+
+      &::-webkit-scrollbar {
+        width: 12px;
+      }
+
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+        background-color: #cacaca;
+      }
+
+      .comments_intro {
+        font-size: 35px;
+        font-family: "Roboto";
+        font-weight: 600;
+
+        span {
+          font-weight: 400;
+        }
+      }
+
+      .comment_bar {
+        width: 100%;
+        height: auto;
+
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        // background: gray;
+
+        .sort_input {
+          margin-top: 15px;
+          align-self: flex-end;
+          font-size: 15px;
+          color: purple;
+          font-weight: bold;
+
+          select {
+            border: none;
+            font-size: 15px;
+            color: purple;
+            border-radius: 0;
+            cursor: pointer;
+
+            &:focus {
+              outline: none;
+            }
+
+            option {
+              border-radius: 0;
+            }
+          }
         }
 
-        .news_summary {
+        .comment_bar_wrapper {
+          width: 100%;
+          height: 100%;
+          display: flex;
+
+          span {
+            font-family: "Balsamiq Sans";
+
+            margin-left: 20px;
+            cursor: pointer;
+
+            &:first-child {
+              text-decoration: underline;
+              margin-left: 0px;
+            }
+          }
+        }
+      }
+    }
+
+    .comments_socials {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      margin-top: 25px;
+
+      .btn {
+        width: 30%;
+
+        button {
+          width: 100%;
+          height: 40px;
+          background-color: purple;
+          font-weight: bold;
+          color: white;
+          border: none;
+          cursor: pointer;
+        }
+      }
+
+      .btm_socialmedia {
+        width: 70%;
+        display: flex;
+        margin-left: 45px;
+
+        .icn {
+          font-size: 15px;
+          margin-left: 15px;
+          width: 35px;
+          height: 35px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #eeeeee;
+          border-radius: 50%;
+          cursor: pointer;
+
+          &:first-child {
+            margin-left: 0px;
+          }
+        }
+      }
+    }
+
+    .comment_content_wrapper {
+      width: 100%;
+
+      .comment_content {
+        display: flex;
+
+        margin-bottom: 35px;
+        margin-top: 35px;
+
+        &:first-child {
+          margin-top: 0px;
+        }
+
+        .profile_img {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          background-color: rgb(192, 192, 192);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-family: "Roboto";
+          font-weight: bold;
+          color: #ffffff;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .commnent_details {
+          margin-left: 10px;
+          width: 80%;
+
+          .user_name {
+            font-family: "Roboto";
+          }
+
+          .location_date {
+            color: rgb(100, 100, 100);
+            margin-top: 5px;
+            margin-bottom: 5px;
+            span {
+              &:first-child {
+                word-spacing: 10px;
+              }
+            }
+          }
+
+          .comment_txt {
+            font-family: "Roboto";
+            line-height: 28px;
+          }
+
+          .comment_footer {
             margin-top: 15px;
-            font-family: 'Gideon Roman';
-            font-weight: 400;
-            font-size: 23px;
-            line-height: 30px;
-        }
-
-        .top_socialmedia {
-            width: 70%;
             display: flex;
+            justify-content: space-between;
+            align-items: center;
 
-            .icn {
-                font-size: 15px;
-                margin-left: 15px;
-                width: 35px;
-                height: 35px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background-color: #EEEEEE;
-                border-radius: 50%;
+            .rec_share {
+              color: #4d9fe2;
+
+              span {
                 cursor: pointer;
 
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                  color: #1f78c0;
+                }
                 &:first-child {
-                    margin-left: 0px;
-                }
-            }
-        }
-
-        .media_1 {
-            width: 100%;
-            height: 50vh;
-            background: #ee4f;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-            .media_description {
-                font-family: 'roboto';
-                font-size: 13px;
-                color: rgb(119, 119, 119);
-                font-style: italic;
-            }
-        }
-
-        .author {
-            width: 40%;
-            height: 6vh;
-            // background: orangered;
-            margin-top: 40px;
-            display: flex;
-            align-items: center;
-
-            .auth_img {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                overflow: hidden;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                  margin-right: 10px;
                 }
 
-            }    
-            .auth_name {
-                display: block;
-                font-size: 15px;
-                font-family: 'roboto';
-                font-weight: 500;
-                margin-left: 5px;
-            }
-        }
-
-        .date_time {
-            font-size: 13px;
-            font-family: 'roboto';
-        }
-
-        .news_text {
-            font-size: 18px;
-            line-height: 30px;
-            margin-top: 35px;
-            font-family: 'Balsamiq Sans';
-        }
-
-        .comments_socials {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            margin-top: 25px;
-
-            .btn {
-                width: 30% ;
-
-                button {
-                    width: 100%;
-                    height: 40px;
-                    background-color: purple;
-                    font-weight: bold;
-                    color: white;
-                    border: none;
-                    cursor: pointer;
+                &:last-child {
+                  margin-left: 10px;
                 }
+              }
             }
 
-            .btm_socialmedia {
-                width: 70%;
-                display: flex;
-                margin-left: 45px;
-    
-                .icn {
-                    font-size: 15px;
-                    margin-left: 15px;
-                    width: 35px;
-                    height: 35px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: #EEEEEE;
-                    border-radius: 50%;
-                    cursor: pointer;
-    
-                    &:first-child {
-                        margin-left: 0px;
-                    }
-                }
+            .flag {
+              color: rgb(255, 5, 5);
+              cursor: pointer;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .newsPage_container {
+    // max-width: 0;
+    width: 100%;
+    // background: blue;
+    .newsPage_wrapper {
+      // background: red;
+      max-width: 95%;
+    }
+  }
+}
+
+@media only screen and (max-width: 750px) {
+    .newsPage_container {
+      .newsPage_wrapper {
+        .news_comments {
+            
+            .comments_intro {
+                font-size: 30px;
+            }
+        }
+      }
+    }
+  }
+
+@media only screen and (max-width: 600px) {
+  .newsPage_container {
+    .newsPage_wrapper {
+      .media {
+        img {
+          height: 300px;
+        }
+      }
+    }
+
+    .comments_socials {
+        display: block !important;
+
+        .btn {
+            width: 70% !important;
+            margin-bottom: 20px !important;
+        }
+
+        .btm_socialmedia {
+            margin-left: 0px !important;
         }
     }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .newsPage_container {
+    .newsPage_wrapper {
+      .news_title {
+        font-size: 35px;
+      }
+
+      .news_summary {
+        font-size: 19px;
+      }
+      .media {
+        img {
+          height: 250px;
+        }
+      }
+
+      .top_socialmedia {
+        width: 100%;
+      }
+    }
+  }
 }
